--- a/about.html
+++ b/about.html
@@ -12,5 +12,6 @@
       unde tempore ipsa ipsum necessitatibus eius, perspiciatis quasi nemo
       aliquam.
     </p>
+    <p>Lorem, ipsum</p>
   </body>
 </html>
