--- a/about.html
+++ b/about.html
@@ -12,6 +12,6 @@
       unde tempore ipsa ipsum necessitatibus eius, perspiciatis quasi nemo
       aliquam.
     </p>
-    <p>Lorem, ipsum</p>
+    <p>Lorem, ipsum (input)</p>
   </body>
 </html>
